# Acacia

./: CMakeLists.txt  README.md  acacia.desktop  acacia.notifyrc
src/: Acaciaui.rc  acaciawindow.cpp  acaciawindow.h  acaciawindow.ui  main.cpp
